@@ -50,6 +50,7 @@ Requires: perl(Regexp::Common)
 Requires: perl(RRDs)
 Requires: perl(Template)
 Requires: perl(Term::ReadKey)
+Requires: perl(Test::Perl::Critic)
 Requires: perl(Test::Pod), perl(Test::Pod::Coverage)
 Requires: perl(Thread::Pool)
 Requires: perl(UNIVERSAL::require)
